<resources>
    <string name="app_name">ClassAttendanceApplication</string>

    <string name="applogo">applogo</string>
    <string name="motto">motto</string>
    <string name="sign_in">sign_in</string>
    <string name="sign_up">sign_up</string>
    <string name="direct">Direct</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="education_and_training_for_the_real_world">Education and Training for The Real World</string>
    <string name="password">Password</string>
    <string name="todo">todo</string>
    <string name="username">Username</string>
    <string name="activity_sign_in">Sign In</string>
    <string name="activity_sign_up">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="skip">Skip</string>
    <string name="units_button">Units Button</string>
    <string name="classes_button">Classes Button</string>
    <string name="attendance_button">Attendance Button</string>
    <string name="skipp">Skipp</string>
    <string name="classes">Classes</string>
    <string name="new_class">New Class</string>
    <string name="classitem1">Class:</string>
    <string name="create_class">Create Class</string>

    <string name="biometric_failed">Fingerprint not recognized</string>
    <string name="attendance">Attendance</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="attendance0">Attendance</string>
    <string name="classes0">Classes</string>
    <string name="units">Units</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="view_units">View Units</string>
    <string name="new_unit">New Unit</string>
    <string name="enter_classcode">Enter ClassCode</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="remember_me0">Remember me</string>
    <string name="forgot_password0">Forgot Password?</string>
    <string name="create_account0">Create Account</string>

</resources>
