<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bwelcome">

    <ImageView
        android:id="@+id/appLogoIV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"
        android:contentDescription="@string/applogo"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/appSloganTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appLogoIV"
        android:text="@string/education_and_training_for_the_real_world"
        android:textColor="@color/colorText"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/appLoginBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appSloganTV"
        android:layout_marginTop="150dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/appRegisterBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appLoginBTN"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorText"
        android:layout_centerInParent="true"/>



    <Button
        android:id="@+id/directBTN"
        android:layout_below="@+id/appRegisterBTN"
        android:text="@string/skip"
        android:textColor="@color/colorText"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</RelativeLayout>