<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttendanceActivity"
    android:background="@drawable/bwelcome">

    <ImageView
        android:id="@+id/attendancelogoIV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/applogo"
        app:srcCompat="@drawable/icon" />

    <TextView
        android:id="@+id/attendancesloganTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attendancelogoIV"
        android:text="@string/education_and_training_for_the_real_world"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/attendancebackbtn"
        android:layout_below="@+id/attendancesloganTV"
        android:text="Back"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/attendancehomeBTN"
        android:layout_below="@+id/attendancesloganTV"
        android:text="HOME"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:layout_marginStart="270dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/viewattendanceTV"
        android:layout_below="@+id/attendancehomeBTN"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:text="@string/attendance"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/takeattendanceTV"
        android:layout_below="@id/viewattendanceTV"
        android:layout_centerInParent="true"
        android:text="@string/take_attendance"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>